maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: not found: value MurNord
  if (!MurNord(x, y) && getIndication(x, y - 1) == 9999) {
       ^